add margin to paragraph

--- a/intro/style.css
+++ b/intro/style.css
@@ -2,3 +2,10 @@ div {
     padding: 25px 50px 75px 100px;
 }
 
+p {
+    margin-top: 85px;
+    margin-left: 70px;
+    margin-right: 60px;
+    margin-bottom: 90px;
+}
+
